objects/ARF__c.object
<CustomObject>
    <fields>
        <fullName>FundingTypeSRGroup__c</fullName>
        <inlineHelpText>Note: GroupMed Adv plans are typically FI</inlineHelpText>
        <label>Funding Type SR Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeSRRx__c</fullName>
        <label>Funding Type SR Rx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeSTD__c</fullName>
        <label>Funding Type STD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeUniView__c</fullName>
        <label>Funding Type UniView</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeVolADD__c</fullName>
        <label>Funding Type VolADD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeVolLTD__c</fullName>
        <label>Funding Type VolLTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeVolSTD__c</fullName>
        <label>Funding Type VolSTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeWellPriorityCDHPWIOnly__c</fullName>
        <label>Funding Type WellPriorityCDHPWIOnly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeWellPriorityWIOnly__c</fullName>
        <label>Funding Type WellPriorityWIOnly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FutureMoms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Moms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GABlueOpenAccessPOS01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GA - Blue Open Access POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GABlueOpenAccessPOS02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GA - Blue Open Access POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeoAccessComments__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>GeoAccess Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeoAccesscensuswzipcodesrequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GeoAccess (census w/ zip codes required)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeoBlue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GeoBlue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Groupforexistingaccount__c</fullName>
        <formula>Account__r.GroupNumbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group # for existing account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMOAdvantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO Advantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMOMedical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMOSRGroupMedicareAdvantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO SR Group Medicare Advantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMOSRGroupMedicareAdvwRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO SR Group Medicare Adv wRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMOSRIndicMedicareAdv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO SR Indic Medicare Adv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMOSRIndvMedicareAdvwRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO SR Indv Medicare Adv wRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMOSliceANA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO Slice (ANA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRABanking__c</fullName>
        <label>HRA Banking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HealthEquity (WGS and NASCO ONLY)</fullName>
                </value>
                <value>
                    <fullName>Anthem/LITES</fullName>
                </value>
                <value>
                    <fullName>Anthem/Alegeus (WGS ONLY)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSABanking__c</fullName>
        <label>HSA Banking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HealthEquity (WGS and NASCO ONLY)</fullName>
                </value>
                <value>
                    <fullName>BenefitWallet</fullName>
                </value>
                <value>
                    <fullName>Anthem/Alegeus (WGS ONLY)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWSAccountExecutive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you checked a H&amp;W product(s) please specify the following</inlineHelpText>
        <label>HWS Account Executive</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Havewebidonthiscasepreviously__c</fullName>
        <label>Have we bid on this case previously?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthEquityWGSandNASCOONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HealthEquity (WGS and NASCO ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthWellness__c</fullName>
        <label>Health &amp; Wellness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthyLifestyles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthy Lifestyles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighPerformanceSelectPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Performance (Select PPO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ILBlueChoiceOptionsPPO1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IL - Blue Choice Options PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IL_Blue_Choice_Options_PPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IL – Blue Choice Options PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRIncumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Individual Retiree (via Private Exchange Solution)</inlineHelpText>
        <label>IR Incumbent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IfYeswhydidntwewin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Yes, why didn&apos;t we win?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncumbentCarrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incumbent Carrier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incumbent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicatelevelofdetailbeingrequested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(MSA, 3-digit ZIP, or provider-specific methodology)</inlineHelpText>
        <label>Indicate level of detail being requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InformedTreatmentOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informed Treatment Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InsightVision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insight Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegratedHealthModelIHMLocal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(requires CEP exception submission)</inlineHelpText>
        <label>Integrated Health Model (IHM) - Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegratedHealthModelIHMNational__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(requires CIP exception submission)</inlineHelpText>
        <label>Integrated Health Model (IHM) - National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalMedicineRePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Medicine Re-Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternetOnlineProgram__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internet (Online) Program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsthisaMedicalinforceclient__c</fullName>
        <inlineHelpText>(WGS or NASCO ONLY)</inlineHelpText>
        <label>Is this a Medical in-force client?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsthisaNetworkAnalysisONLYrequest__c</fullName>
        <label>Is this a Network Analysis ONLY request?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Isthisarushrequest__c</fullName>
        <inlineHelpText>*Anything less than seven business days may incur additional fees</inlineHelpText>
        <label>Is this a rush request?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAAorMCS__c</fullName>
        <label>JAA or MCS?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
                <value>
                    <fullName>MCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDIncumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L&amp;D Incumbent:</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDSalesAccountMgr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you checked a L&amp;D product(s) above, please ALSO indicate the following</inlineHelpText>
        <label>L&amp;D Sales/Account Mgr</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPPOSRGroupMedicareAdvantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LPPO SR Group Medicare Advantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPPOSRGroupMedicareAdvwRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LPPO SR Group Medicare Adv wRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPPOSRIndicMedicareAdv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LPPO SR Indic Medicare Adv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPPOSRIndvMedicareAdvwRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LPPO SR Indv Medicare Adv wRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LifeDisability__c</fullName>
        <label>Life &amp; Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lineitemdetailedresultsrequired__c</fullName>
        <inlineHelpText>Note: This will require appropriate levels of approval. Please contact your Provider Data Analyst for more detail.</inlineHelpText>
        <label>Line item detailed results required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalLaborTrust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Labor/Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalPublicEntities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Public Entities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MNGroupValueNetwork1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MN - Group Value Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MNGroupValueNetwork2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MN - Group Value Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOBlueAccessChoicePPOStLouis1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MO - Blue Access Choice PPO (St.Louis)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOBlueAccessChoicePPOStLouis2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MO - Blue Access Choice PPO (St.Louis)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOBluePreferredPOS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MO - Blue Preferred POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOBluePreferredPOS2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MO - Blue Preferred POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOPreferredCareBluePPOKC1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MO - Preferred-Care Blue PPO (KC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOPreferredCareBluePPOKC2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MO - Preferred-Care Blue PPO (KC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedPartD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Med Part D</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedSuppGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Med Supp Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalDisruptionAanalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Disruption Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalModule__c</fullName>
        <formula>HYPERLINK(&quot;/flow/ARF_Medical?ARFID=&quot;&amp;Id, &quot;Medical Module&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MercerHealthAdvantageMHA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mercer Health Advantage (MHA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Millimanaddlcost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requires approval from Actuarial and Plan VP.</inlineHelpText>
        <label>Milliman (add&apos;l cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyHealthAdvantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MyHealth Advantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyHealthCoach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MyHealth Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NASCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NASCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHBlueChoiceOpenAccessPOS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NH - BlueChoice Open Access POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHBlueChoiceOpenAccessPOS2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NH - BlueChoice Open Access POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NYEmpirePOS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NY - Empire POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NYEmpirePOS2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NY - Empire POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalPPOPPODental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National PPO/PPO+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetworkAnalysisDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Analysis Due Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NetworkAnalysis__c</fullName>
        <label>Network Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewOrRenewing__c</fullName>
        <inlineHelpText>If New Rx: must attach detailed Rx utilization file or confirm one has been requested from consultant/group
If Renewing Rx: provide group matrix or list of active group numbers</inlineHelpText>
        <label>New or Renewing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nurseline247__c</fullName>
        <defaultValue>false</defaultValue>
        <label>24/7 Nurseline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDT OON%:</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfEligibleSubsPerState__c</fullName>
        <label># of Eligible Subs per State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfEligibleSubscribers__c</fullName>
        <label># of Eligible Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfGeoaccess__c</fullName>
        <label># of Geoaccess</label>
        <summaryForeignKey>GeoAccessParameter__c.ARFGeoAccess__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OptLifeAdD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Life/AD&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherRelationshipsWithThisCompany__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Do we have any other relationships with this company? Are they a supplier /vendor for us?</inlineHelpText>
        <label>Other relationships with this company?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POSTier1Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS Tier 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POSTier2Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS Tier 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPOCDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPO CDHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PasswordForCensusFile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password (for census file)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PharmacyFormularyDisruptionAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy Formulary Disruption Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PharmacyFullFileClaimsRePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy Full File Claims Re-Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PharmacyGenericDispensingRate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(requires 12 months of claim data)</inlineHelpText>
        <label>Pharmacy Generic Dispensing Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PharmacyNetworkDisruptionAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy Network Disruption Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <label>Pharmacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PosCdhpWiOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS CDHP (WI Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimeGrid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime/GRID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrioritySelectHmoCaOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Select HMO (CA ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrivateExchangeSolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Exchange Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductivitySolutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productivity Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProviderCounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Counts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProviderList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Binders Only</fullName>
                </value>
                <value>
                    <fullName>Audit, Survey</fullName>
                </value>
                <value>
                    <fullName>InterPlan</fullName>
                </value>
                <value>
                    <fullName>Follow-up Questions</fullName>
                </value>
                <value>
                    <fullName>Network Analysis Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestorName__c</fullName>
        <defaultValue>$User.FirstName&amp;&quot; &quot;&amp;$User.LastName</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxIncumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If quoting Rx; Please copy InternalRxRFP@wellpoint.com on the request and provide both the current and proposed Rx benefit design/copay information.</inlineHelpText>
        <label>Rx Incumbent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRGroupMedicareAdvantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Group Medicare Advantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectHmoPlus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select HMO Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectHmo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select HMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectVision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpecialInstructions1__c</fullName>
        <description>Used in Flow for Long Text</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SpecialInstructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpecialNotes__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>